[gd_scene load_steps=2 format=3 uid="uid://da0qjdjuenqkd"]

[ext_resource type="Script" path="res://Dash.gd" id="1_n3ssw"]

[node name="Dash" type="Node2D"]
script = ExtResource("1_n3ssw")

[node name="DashDurationTimer" type="Timer" parent="."]
one_shot = true

[node name="DashCooldownTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="DashDurationTimer" to="." method="_on_dash_duration_timer_timeout"]
[connection signal="timeout" from="DashCooldownTimer" to="." method="_on_dash_cooldown_timer_timeout"]
